# mindgraph

./: .env.example  .gitattributes  .gitignore  LICENSE  README.en.md  README.md  pyproject.toml  requirements.txt  wiki.md
docs/: process.html
mindgraph/: SPEC.md  __init__.py  _log.py  cli.py  config.py  llm.py  models.py  testset.schema.json
mindgraph/builder/: __init__.py  coverage.py  interfaces.py  loop.py  reviser.py  run.py  stubs.py
mindgraph/chunking/: __init__.py  structural_chunker.py
mindgraph/extraction/: __init__.py  extractor.py  neo4j_store.py  resolve.py
mindgraph/extraction/prompts/: extract_edges.md  extract_nodes.md
mindgraph/induction/: __init__.py  inducer.py
mindgraph/induction/prompts/: induce_concepts.md
mindgraph/qa/: __init__.py  answerer.py  judge.py  retriever.py  scorer.py
mindgraph/qa/prompts/: answer.md  judge.md
mindgraph/schema/: constraints.cypher  meta_ontology.json
mindgraph/testset/: __init__.py  generator.py  quota.py  review.py  run.py  validate.py
mindgraph/testset/prompts/: testset_extraction.md  testset_reasoning.md
